Mission_06 Final Changes

--- a/Mission06_Harris/Views/Home/MovieForm.cshtml
+++ b/Mission06_Harris/Views/Home/MovieForm.cshtml
@@ -2,6 +2,9 @@
 <!-- Category, Title, Year, Director, Rating (dropdown), Edited (yes/no--true/false), Lent to, Notes(limited 25 chars)
 edited, lent to, notes not required to enter a new field, the rest are 
 -->
+@{
+    ViewData["Title"] = "Add Movie";
+}
 <h1>Movie Form</h1>
 <br />
 <form method="post">
