Final Mission_06 Changes

--- a/Mission06_Harris/Views/Home/MovieForm.cshtml
+++ b/Mission06_Harris/Views/Home/MovieForm.cshtml
@@ -18,10 +18,10 @@ edited, lent to, notes not required to enter a new field, the rest are
     <input asp-for="Director" /><br /><br />
     <label asp-for ="Rating">Rating: </label>
     <select asp-for ="Rating">
-        <option value="rating">G</option>
-        <option value="rating">PG</option>
-        <option value="rating">PG-13</option>
-        <option value="rating">R</option>
+        <option value="G">G</option>
+        <option value="PG">PG</option>
+        <option value="PG-13">PG-13</option>
+        <option value="R">R</option>
     </select>
     <br /><br />
     <label asp-for="Edited">Edited: </label>
