--- a/Mission06_Harris/Views/Home/Confirmation.cshtml
+++ b/Mission06_Harris/Views/Home/Confirmation.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Submitted";
 }
+<!--Confirmation page when someone has submitted a correct form -->
 <h1>Thank you for adding a movie!</h1><br />
 <a asp-controller="Home" asp-action="MovieForm">Add another movie.</a><br />
 <a asp-controller="Home" asp-action="Index">Return to the home page.</a>
