--- a/Mission06_Harris/Views/Home/Index.cshtml
+++ b/Mission06_Harris/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Joel Hilton Home";
 }
+<!--Abby Harris
+    Section 001
+    This is a .NET app for Joel Hilton, so he can view his movie collection
+-->
 <h1>The Joel Hilton Film Collection </h1>
 <br />
 <div>
@@ -9,4 +13,7 @@
     <p>Come learn about who Joel Hilton is, what he does, and his amazing movie collection.</p> <br />
     <a asp-controller="Home" asp-action="MovieForm">Add a movie to the database!</a>
 </div>
+    <div>
+        <a asp-controller="Home" asp-action="MovieTable">View the Movies!</a>
+    </div>
 
