--- a/Mission06_Harris/Views/Shared/_Layout.cshtml
+++ b/Mission06_Harris/Views/Shared/_Layout.cshtml
@@ -24,10 +24,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieForm">Movie Form</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieForm">Add Movie</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieTable">View Movies</a>
                         </li>
                     </ul>
                 </div>
